Add `primary` flag to ShardInfo
Expose the flag which was added with: https://github.com/crate/crate/pull/18610